--- a/GTM.Common/Common/Common.csproj
+++ b/GTM.Common/Common/Common.csproj
@@ -7,7 +7,7 @@
 
     <!-- METADATOS PARA NUGET -->
     <PackageId>GTM.Common</PackageId>
-    <Version>(packageVersion)</Version> <!-- Puedes reemplazar con lo que esté en tu version.txt -->
+    <Version>$(PACKAGE_VERSION)</Version> <!-- Puedes reemplazar con lo que esté en tu version.txt -->
     <Authors>Rogelio Arriaga</Authors>
     <Company>General Transmissions</Company>
     <Description>Librería común para las APIs de General Transmissions, y Raptor057</Description>
