--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,14 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'ApiCommon/GTM.Common/Common/version'
+      - 'GTM.Common/Common/version'
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ApiCommon/GTM.Common
+        working-directory: GTM.Common
 
     steps:
     - name: Checkout repo
@@ -26,7 +26,7 @@ jobs:
       id: version
       run: |
         VERSION=$(cat Common/version)
-        echo "VERSION=$VERSION"
+        echo "version=$VERSION"
         echo "version=$VERSION" >> $GITHUB_OUTPUT
 
     - name: Restore dependencies
