fix: update agent pool name and demands in Azure Pipelines configuration

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,9 @@ trigger:
       - main
 
 pool:
-  name: Default  # Cambia si tu agente tiene otro nombre
+  name: 'Deployment'
+  demands:
+    - Agent.Name -equals GT-Traceability-System-Linux
 
 variables:
   buildConfiguration: 'Release'
