--- a/GTM.Common/Common/Common.csproj
+++ b/GTM.Common/Common/Common.csproj
@@ -10,7 +10,7 @@
     <Version>$(PACKAGE_VERSION)</Version> <!-- Puedes reemplazar con lo que esté en tu version.txt -->
     <Authors>Rogelio Arriaga</Authors>
     <Company>General Transmissions</Company>
-    <Description>Librería común para las APIs de General Transmissions, y Raptor057</Description>
+    <Description>Librería para las APIs de GT, y Raptor057</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression> <!-- Cambia si usas otra -->
     <RepositoryUrl>https://github.com/Raptor057/ApiCommon</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Raptor057</PackageProjectUrl>
