--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,49 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- main
+  - main
 
 pool:
   name: 'Deployment'
   demands:
-    - Agent.Name -equals GT-Traceability-System-Linux
+    - Agent.Name -equals GT-Administration-System-Linux
 
+variables:
+  buildConfiguration: 'Release'
+  versionFilePath: 'Common/version'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- task: UseDotNet@2
+  displayName: 'Instalar .NET SDK'
+  inputs:
+    packageType: 'sdk'
+    version: '8.0.x'
+
+- task: Bash@3
+  displayName: 'Leer versión desde archivo'
+  inputs:
+    targetType: 'inline'
+    script: |
+      version=$(cat $(versionFilePath))
+      echo "##vso[task.setvariable variable=PACKAGE_VERSION]$version"
+      echo "Versión leída: $version"
 
 - script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+    dotnet restore GTM.Common.sln
+  displayName: 'Restaurar dependencias'
+
+- script: |
+    dotnet build GTM.Common.sln --configuration $(buildConfiguration)
+  displayName: 'Compilar solución'
+
+- script: |
+    dotnet pack Common/Common.csproj --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory) -p:PackageVersion=$(PACKAGE_VERSION)
+  displayName: 'Empaquetar NuGet con versión $(PACKAGE_VERSION)'
+
+- task: NuGetAuthenticate@1
+  displayName: 'Autenticar con Azure Artifacts'
+
+- task: NuGetCommand@2
+  displayName: 'Subir paquete al feed privado'
+  inputs:
+    command: 'push'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
+    publishVstsFeed: 'gtm.common.package'
