--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,14 +4,14 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - 'GTM.Common/Common/version'
+      - 'Common/Common/version'
 
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: GTM.Common
+        working-directory: Common
 
     steps:
     - name: Checkout repo
