Fix publish workflow and bump to 0.0.9

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '8.0.100'
 
       - name: Restore
         run: dotnet restore Common.sln
@@ -27,7 +27,7 @@ jobs:
         run: dotnet test Common.sln --configuration Release --no-restore
 
       - name: Pack
-        run: dotnet pack Common/Common.csproj --configuration Release -o artifacts
+        run: dotnet pack Common/Common.csproj --configuration Release -o artifacts -p:RepositoryUrl=https://github.com/Raptor057/ApiCommon -p:PackageProjectUrl=https://github.com/Raptor057/ApiCommon
 
       - name: Publish to NuGet
         run: dotnet nuget push "artifacts/*.nupkg" --api-key "${{ secrets.NUGET_API_KEY }}" --source "https://api.nuget.org/v3/index.json" --skip-duplicate
