--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -17,7 +17,7 @@
     <Company>Raptor057</Company>
     <Description>Library for Raptor057's personal use APIs</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression> <!-- Cambia si usas otra -->
-    <RepositoryUrl>https://github.com/Raptor057/ApiCommon.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/Raptor057/ApiCommon</RepositoryUrl>
     <PackageProjectUrl>https://github.com/Raptor057/ApiCommon</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageReadmeFile>README.md</PackageReadmeFile>
