--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -25,7 +25,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-     <None Include="..\\README.md" Pack="true" PackagePath="\\"/>
+     <None Include="..\\README.md" Pack="true" PackagePath="" />
       <PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
       <PackageReference Include="MediatR" Version="12.5.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.4" />
